Fixed alignement on blog home

--- a/themes/pothibo/assets/stylesheets/blog/index.scss
+++ b/themes/pothibo/assets/stylesheets/blog/index.scss
@@ -40,8 +40,6 @@ $width: 100%;
 
 @mixin pagination {
   nav.pagination {
-    display: inline-block;
-    margin: 24px 0;
     font-size: 1.3em;
     padding: 8px 0;
     text-align: center;
@@ -85,28 +83,20 @@ $width: 100%;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
-    ul {
-      flex: 3 auto;
-      width: 100%;
-      @include post;
+    .wrapper {
+      flex: 1 100%;
+      ul {
+        @include post;
+      }
+      @include pagination;
     }
-    @include pagination;
-  }
-}
-
-@mixin footer {
-  footer {
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: column;
-    flex: 1 auto;
   }
 }
 
 #posts-index {
   @include header;
-  @include footer;
   @include entypo;
 
   main {
